some little work

--- a/CasiaBot/VisualStudio/CasiaBot.vcxproj
+++ b/CasiaBot/VisualStudio/CasiaBot.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="..\Source\ActionHelper.cpp" />
     <ClCompile Include="..\Source\ActionZergBase.cpp" />
     <ClCompile Include="..\Source\ActionZVPDragoon.cpp" />
+    <ClCompile Include="..\Source\ActionZVPHydra.cpp" />
     <ClCompile Include="..\Source\ActionZVPZealot.cpp" />
     <ClCompile Include="..\Source\ActionZVPZerglingRush.cpp" />
     <ClCompile Include="..\Source\ActionZVTBarracksUnits.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="..\Source\ActionZVPDragoon.h" />
     <ClInclude Include="..\Source\ActionZVPZealot.h" />
     <ClInclude Include="..\Source\ActionZVPZerglingRush.h" />
+    <ClInclude Include="..\Source\ActionZVPHydra.h" />
     <ClInclude Include="..\Source\ActionZVTBarracksUnits.h" />
     <ClInclude Include="..\Source\ActionZVTFactoriesUnits.h" />
     <ClInclude Include="..\Source\ActionZVZZerglingLurker.h" />
