--- a/CasiaBot/VisualStudio/CasiaBot.vcxproj.filters
+++ b/CasiaBot/VisualStudio/CasiaBot.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClCompile Include="..\Source\bwem\EasyBMP_1.06\EasyBMP.cpp">
       <Filter>bwem</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\ActionZVPHydra.cpp">
+      <Filter>game\action</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\CombatCommander.h">
@@ -511,6 +514,9 @@
     </ClInclude>
     <ClInclude Include="..\Source\bwem\EasyBMP_1.06\EasyBMP_VariousBMPutilities.h">
       <Filter>bwem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\ActionZVPHydra.h">
+      <Filter>game\action</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
